--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
-<html>
+
 <head>
-    <title>GeekWise JavaScript 1</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <title>To-Do</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/css/materialize.min.css">
 </head>
-<body>
-<button onclick="alertMsg()">Click me!</button>
-    <script src="js/jquery-2.1.3.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/script.js"></script>
+<!--start of container-->
+<div class="container">
+   <div class="row">
+     <div class="col s12">
+         <input id= "task-text" type="text" placeholder= "what would you like to do today?">
+         <a id="add-task" class="btn-floating btn-large waves-effect waves-light red"><i class="mdi-content-add"></i></a>
+     </div>
+<div class="row">
+    <div class="col s12">
+        <ul class="to-do-item">
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
+</div>
+    </div>
+</div>
+<!--end of container-->
+
+
 </body>
+<footer>
+    <script src="js/jquery-2.1.3.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/js/materialize.min.js"></script>
+    <script src="js/script.js"></script>
+</footer>
 </html>
