fixing div indentations and adding comments

--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
          <input id= "task-text" type="text" placeholder= "what would you like to do today?">
          <a id="add-task" class="btn-floating btn-large waves-effect waves-light red"><i class="mdi-content-add"></i></a>
      </div>
-<div class="row">
-    <div class="col s12">
-        <ul class="to-do-item">
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
-    </div>
-</div>
-    </div>
-</div>
-<!--end of container-->
+   </div>
+
+    <!-- this is where we're going to put the list items that the user gives us -->
+    <div class="row">
+        <div class="col s12">
+            <ul class="to-do-item">
+                <li></li>
+                <li></li>
+                <li></li>
+             </ul>
+        </div> <!--end col s12-->
+    </div> <!--end row-->
+</div><!--end of container-->
 
 
 </body>
