added var list, created list items, created element list itemand added text content.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- this is where we're going to put the list items that the user gives us -->
     <div class="row">
         <div class="col s12">
-            <ul class="to-do-item">
+            <ul id="list-items" class="to-do-item">
             </ul>
         </div> <!--end col s12-->
     </div> <!--end row-->
