--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-
+<html>
 <head>
     <title>To-Do</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/css/materialize.min.css">
+    <nav> To-Do List</nav>
 </head>
 <!--start of container-->
 <div class="container">
